--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,13 +64,11 @@
         android:gravity="center_horizontal"
 
 
-
         android:visibility="gone"
 
 
-
-
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginLeft="4dp"
         android:keepScreenOn="true">
 
         <RelativeLayout
@@ -83,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:text="F"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button1"
@@ -96,7 +95,8 @@
                 android:layout_height="wrap_content"
                 android:text="x"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button2"
@@ -108,7 +108,8 @@
                 android:layout_height="wrap_content"
                 android:text="+"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button3"
@@ -120,19 +121,24 @@
                 android:layout_height="wrap_content"
                 android:text="="
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button4"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/button3" />
 
+
+
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="%"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button5"
@@ -145,7 +151,8 @@
                 android:layout_height="wrap_content"
                 android:text="/"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button6"
@@ -158,7 +165,8 @@
                 android:layout_height="wrap_content"
                 android:text="-"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button7"
@@ -171,7 +179,8 @@
                 android:layout_height="wrap_content"
                 android:text="I"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button8"
@@ -181,12 +190,15 @@
 
 
 
+
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button9"
@@ -199,7 +211,8 @@
                 android:layout_height="wrap_content"
                 android:text="8"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button10"
@@ -212,7 +225,8 @@
                 android:layout_height="wrap_content"
                 android:text="9"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button11"
@@ -225,7 +239,8 @@
                 android:layout_height="wrap_content"
                 android:text="II"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button12"
@@ -236,12 +251,14 @@
 
 
 
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="4"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button13"
@@ -254,7 +271,8 @@
                 android:layout_height="wrap_content"
                 android:text="5"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button14"
@@ -267,7 +285,8 @@
                 android:layout_height="wrap_content"
                 android:text="6"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button15"
@@ -280,7 +299,8 @@
                 android:layout_height="wrap_content"
                 android:text="III"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button16"
@@ -297,7 +317,8 @@
                 android:layout_height="wrap_content"
                 android:text="1"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button17"
@@ -310,7 +331,8 @@
                 android:layout_height="wrap_content"
                 android:text="2"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button18"
@@ -323,7 +345,8 @@
                 android:layout_height="wrap_content"
                 android:text="3"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button19"
@@ -336,7 +359,8 @@
                 android:layout_height="wrap_content"
                 android:text="^"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button20"
@@ -353,7 +377,8 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button21"
@@ -366,7 +391,8 @@
                 android:layout_height="wrap_content"
                 android:text="Clr"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button22"
@@ -379,7 +405,8 @@
                 android:layout_height="wrap_content"
                 android:text="Opc"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button23"
@@ -392,7 +419,8 @@
                 android:layout_height="wrap_content"
                 android:text="v"
                 android:textSize="30dp"
-                android:height="80dp"
+                android:textStyle="bold"
+                android:height="70dp"
                 android:background="@drawable/button_background"
                 android:fontFamily="monospace"
                 android:id="@+id/button24"
